# int-intervals

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/scripts/release/: check_codegen.py
.github/workflows/: bench-pages.yml  codspeed.yml  coverage.yml  gate.yml  release.yml
benches/: contains_interval_set.rs  contains_point.rs  difference_with_set.rs  height_at.rs  intersection_with_interval.rs  intersection_with_set.rs  intersects.rs  intersects_interval.rs  interval_containing_point.rs  intervals_intersecting.rs  iter.rs  iter_height_segments.rs  iter_intervals.rs  symmetric_difference.rs  symmetric_difference_with_interval.rs  symmetric_difference_with_set.rs  uncovered_len_of.rs  union_with_interval.rs  union_with_set.rs  window_height_runs.rs
benches/interval/: between.rs  construct.rs  contains.rs  contains_interval.rs  contiguous.rs  convex_hull.rs  difference.rs  intersection.rs  intersects.rs  iter.rs  symmetric_difference.rs  union.rs
benches/set/: construct_set.rs  contains_interval_set.rs  contains_point.rs  coverage_ratio_f32_of.rs  covered_len_of.rs  difference_with_interval.rs  difference_with_set.rs  intersection_with_interval.rs  intersection_with_set.rs  intersects_interval.rs  interval_containing_point.rs  intervals_intersecting.rs  iter_intervals.rs  symmetric_difference_with_interval.rs  symmetric_difference_with_set.rs  uncovered_len_of.rs  union_with_interval.rs  union_with_set.rs
benches/stack/: construct_parallel.rs  construct_stack.rs  window_iter_bounds.rs
src/: interval.rs  lib.rs  set.rs  stack.rs
src/interval/: i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  isize.rs  res.rs  tests_for_adversarial.rs  traits.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs  usize.rs
src/interval/i128/: tests_for_basic.rs  tests_for_between.rs  tests_for_checked_minkowski.rs  tests_for_convex_hull.rs  tests_for_difference.rs  tests_for_intersection.rs  tests_for_len.rs  tests_for_midpoint.rs  tests_for_start_len.rs  tests_for_symmetric_difference.rs  tests_for_try_from_range.rs  tests_for_union.rs
src/interval/i16/: tests_for_basic.rs  tests_for_between.rs  tests_for_checked_minkowski.rs  tests_for_convex_hull.rs  tests_for_difference.rs  tests_for_intersection.rs  tests_for_len.rs  tests_for_midpoint.rs  tests_for_start_len.rs  tests_for_symmetric_difference.rs  tests_for_try_from_range.rs  tests_for_union.rs
src/interval/i32/: tests_for_basic.rs  tests_for_between.rs  tests_for_checked_minkowski.rs  tests_for_convex_hull.rs  tests_for_difference.rs  tests_for_intersection.rs  tests_for_len.rs  tests_for_midpoint.rs  tests_for_start_len.rs  tests_for_symmetric_difference.rs  tests_for_try_from_range.rs  tests_for_union.rs
src/interval/i64/: tests_for_basic.rs  tests_for_between.rs  tests_for_checked_minkowski.rs  tests_for_convex_hull.rs  tests_for_difference.rs  tests_for_intersection.rs  tests_for_len.rs  tests_for_midpoint.rs  tests_for_start_len.rs  tests_for_symmetric_difference.rs  tests_for_try_from_range.rs  tests_for_union.rs
src/interval/i8/: tests_for_basic.rs  tests_for_between.rs  tests_for_checked_minkowski.rs  tests_for_convex_hull.rs  tests_for_difference.rs  tests_for_intersection.rs  tests_for_len.rs  tests_for_midpoint.rs  tests_for_start_len.rs  tests_for_symmetric_difference.rs  tests_for_try_from_range.rs  tests_for_union.rs
src/interval/isize/: tests_for_basic.rs  tests_for_between.rs  tests_for_checked_minkowski.rs  tests_for_convex_hull.rs  tests_for_difference.rs  tests_for_intersection.rs  tests_for_len.rs  tests_for_midpoint.rs  tests_for_start_len.rs  tests_for_symmetric_difference.rs  tests_for_try_from_range.rs  tests_for_union.rs
src/interval/res/: tests_for_into_iter.rs
src/interval/tests_for_adversarial/: algebra.rs  construction.rs  containers.rs  invariants.rs  minkowski.rs
src/interval/traits/: forwarding.rs  sealed.rs  tests_for_int_primitive.rs
src/interval/u128/: tests_for_basic.rs  tests_for_between.rs  tests_for_checked_minkowski.rs  tests_for_convex_hull.rs  tests_for_difference.rs  tests_for_intersection.rs  tests_for_midpoint.rs  tests_for_saturating_minkowski.rs  tests_for_start_len.rs  tests_for_symmetric_difference.rs  tests_for_try_from_range.rs  tests_for_union.rs
src/interval/u16/: tests_for_basic.rs  tests_for_between.rs  tests_for_checked_minkowski.rs  tests_for_convex_hull.rs  tests_for_difference.rs  tests_for_intersection.rs  tests_for_midpoint.rs  tests_for_saturating_minkowski.rs  tests_for_start_len.rs  tests_for_symmetric_difference.rs  tests_for_try_from_range.rs  tests_for_union.rs
src/interval/u32/: tests_for_basic.rs  tests_for_between.rs  tests_for_checked_minkowski.rs  tests_for_convex_hull.rs  tests_for_difference.rs  tests_for_intersection.rs  tests_for_midpoint.rs  tests_for_saturating_minkowski.rs  tests_for_start_len.rs  tests_for_symmetric_difference.rs  tests_for_try_from_range.rs  tests_for_union.rs
src/interval/u64/: tests_for_basic.rs  tests_for_between.rs  tests_for_checked_minkowski.rs  tests_for_convex_hull.rs  tests_for_difference.rs  tests_for_intersection.rs  tests_for_midpoint.rs  tests_for_saturating_minkowski.rs  tests_for_start_len.rs  tests_for_symmetric_difference.rs  tests_for_try_from_range.rs  tests_for_union.rs
src/interval/u8/: tests_for_basic.rs  tests_for_between.rs  tests_for_checked_minkowski.rs  tests_for_convex_hull.rs  tests_for_difference.rs  tests_for_intersection.rs  tests_for_midpoint.rs  tests_for_saturating_minkowski.rs  tests_for_start_len.rs  tests_for_symmetric_difference.rs  tests_for_try_from_range.rs  tests_for_union.rs
src/interval/usize/: tests_for_basic.rs  tests_for_between.rs  tests_for_convex_hull.rs  (+9 more)
src/set/: funcs_for_canonicalization.rs  impls_for_accessors.rs  impls_for_algebra.rs  impls_for_construction.rs  impls_for_find_out_coverage.rs  impls_for_predicates.rs  impls_for_searching.rs  test_support.rs  tests_for_adversarial.rs
src/stack/: change_point.rs  height_run.rs  height_segment.rs  height_stats.rs  int_co_stack.rs  stack_window.rs  tests_for_adversarial.rs
(+58 files in other folders)
