[workspace]
members = [".", "xtask/codegen"]

[package]
name = "int-intervals"
version = "0.1.1"
edition = "2024"
description = "Closed-open integer interval algebra, canonical interval sets, and overlap-stack structures."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jcfangc/int-intervals"
readme = "README.md"
keywords = ["interval", "set", "stack", "no_std", "integer"]
categories = ["data-structures", "no-std"]

[package.metadata.rust-analyzer]
cargo = { features = ["stack", "parallel"] }
check = { extraArgs = ["--tests"] }

exclude = [
    "/benches",
    "src/**/tests_for_*.rs",
    "src/**/test_support.rs",
    "xtask/",
    ".github/",
]

[features]
default = []
set = []
stack = ["set", "either", "once_cell"]
parallel = ["dep:rayon", "set"]

[dependencies]
rayon = { version = "1.12.0", optional = true }
either = { version = "1.16.0", optional = true }
once_cell = { version = "1", optional = true, default-features = false, features = [
    "alloc",
] }

[dev-dependencies]
divan = { version = "4.7.0", package = "codspeed-divan-compat" }
proptest = "1.10.0"
rust_intervals = "1.0.0"
range-collections = "0.4.6"
range-set-blaze = "0.5.0"
rangemap = "1.7.1"

[lib]
doctest = false
bench = false

# ── interval benches ────────────────────────────────────────

[[bench]]
name = "construct"
path = "benches/interval/construct.rs"
harness = false

[[bench]]
name = "contains"
path = "benches/interval/contains.rs"
harness = false

[[bench]]
name = "contains_interval"
path = "benches/interval/contains_interval.rs"
harness = false

[[bench]]
name = "iter"
path = "benches/interval/iter.rs"
harness = false

[[bench]]
name = "intersects"
path = "benches/interval/intersects.rs"
harness = false

[[bench]]
name = "intersection"
path = "benches/interval/intersection.rs"
harness = false

[[bench]]
name = "convex_hull"
path = "benches/interval/convex_hull.rs"
harness = false

[[bench]]
name = "between"
path = "benches/interval/between.rs"
harness = false

[[bench]]
name = "union"
path = "benches/interval/union.rs"
harness = false

[[bench]]
name = "difference"
path = "benches/interval/difference.rs"
harness = false

[[bench]]
name = "symmetric_difference"
path = "benches/interval/symmetric_difference.rs"
harness = false

[[bench]]
name = "contiguous"
path = "benches/interval/contiguous.rs"
harness = false

# ── set benches ─────────────────────────────────────────────

[[bench]]
name = "construct_set"
path = "benches/set/construct_set.rs"
harness = false
required-features = ["set"]

[[bench]]
name = "contains_point"
path = "benches/set/contains_point.rs"
harness = false
required-features = ["set"]

[[bench]]
name = "contains_interval_set"
path = "benches/set/contains_interval_set.rs"
harness = false
required-features = ["set"]

[[bench]]
name = "intersects_interval"
path = "benches/set/intersects_interval.rs"
harness = false
required-features = ["set"]

[[bench]]
name = "intersection_with_set"
path = "benches/set/intersection_with_set.rs"
harness = false
required-features = ["set"]

[[bench]]
name = "union_with_set"
path = "benches/set/union_with_set.rs"
harness = false
required-features = ["set"]

[[bench]]
name = "difference_with_set"
path = "benches/set/difference_with_set.rs"
harness = false
required-features = ["set"]

[[bench]]
name = "symmetric_difference_with_set"
path = "benches/set/symmetric_difference_with_set.rs"
harness = false
required-features = ["set"]

[[bench]]
name = "intersection_with_interval"
path = "benches/set/intersection_with_interval.rs"
harness = false
required-features = ["set"]

[[bench]]
name = "union_with_interval"
path = "benches/set/union_with_interval.rs"
harness = false
required-features = ["set"]

[[bench]]
name = "difference_with_interval"
path = "benches/set/difference_with_interval.rs"
harness = false
required-features = ["set"]

[[bench]]
name = "symmetric_difference_with_interval"
path = "benches/set/symmetric_difference_with_interval.rs"
harness = false
required-features = ["set"]

[[bench]]
name = "iter_intervals"
path = "benches/set/iter_intervals.rs"
harness = false
required-features = ["set"]

[[bench]]
name = "interval_containing_point"
path = "benches/set/interval_containing_point.rs"
harness = false
required-features = ["set"]

[[bench]]
name = "intervals_intersecting"
path = "benches/set/intervals_intersecting.rs"
harness = false
required-features = ["set"]

[[bench]]
name = "covered_len_of"
path = "benches/set/covered_len_of.rs"
harness = false
required-features = ["set"]

[[bench]]
name = "uncovered_len_of"
path = "benches/set/uncovered_len_of.rs"
harness = false
required-features = ["set"]

[[bench]]
name = "coverage_ratio_f32_of"
path = "benches/set/coverage_ratio_f32_of.rs"
harness = false
required-features = ["set"]

# ── stack benches ───────────────────────────────────────────

[[bench]]
name = "construct_stack"
path = "benches/stack/construct_stack.rs"
harness = false
required-features = ["stack"]

[[bench]]
name = "construct_parallel"
path = "benches/stack/construct_parallel.rs"
harness = false
required-features = ["stack", "parallel"]

[[bench]]
name = "height_at"
path = "benches/stack/height_at.rs"
harness = false
required-features = ["stack"]

[[bench]]
name = "iter_height_segments"
path = "benches/stack/iter_height_segments.rs"
harness = false
required-features = ["stack"]

[[bench]]
name = "window_iter_bounds"
path = "benches/stack/window_iter_bounds.rs"
harness = false
required-features = ["stack"]

[[bench]]
name = "window_height_runs"
path = "benches/stack/window_height_runs.rs"
harness = false
required-features = ["stack"]
